# oss

./: .gitignore  Cargo.toml
connectors/: Cargo.toml
connectors/aws/: Cargo.toml
connectors/aws/src/: lib.rs  ses.rs  sns.rs
connectors/caldav/: Cargo.toml
connectors/caldav/src/: lib.rs
connectors/payrix/: Cargo.toml
connectors/payrix/src/: lib.rs
connectors/sdk/: Cargo.toml
connectors/sdk/src/: lib.rs
connectors/smtp/: Cargo.toml
connectors/smtp/src/: lib.rs
connectors/webdav/: Cargo.toml
connectors/webdav/src/: lib.rs
core/: Cargo.toml
core/auth/: Cargo.toml
core/auth/src/: error.rs  lib.rs  oauth.rs  pkce.rs  provider.rs  types.rs
core/auth/src/providers/: box_cloud.rs  dropbox.rs  google.rs  microsoft.rs  mod.rs
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs
core/db/: Cargo.toml
core/db/src/: lib.rs
core/http/: Cargo.toml
core/http/src/: lib.rs
core/sync/: Cargo.toml
core/sync/src/: lib.rs
core/types/: Cargo.toml
core/types/src/: lib.rs
