[workspace]
resolver = "2"
members = ["sdk", "aws", "webdav", "caldav", "smtp", "payrix"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt"] }

# Core crates (external workspace)
core-types = { version = "0.1", path = "../core/types" }
core-http = { version = "0.1", path = "../core/http" }

# Internal crates
connector-sdk = { version = "0.1", path = "sdk" }
connector-aws = { version = "0.1", path = "aws" }
connector-webdav = { version = "0.1", path = "webdav" }
connector-caldav = { version = "0.1", path = "caldav" }
connector-smtp = { version = "0.1", path = "smtp" }
connector-payrix = { version = "0.1", path = "payrix" }

# External dependencies
payrix = { version = "0.1", path = "../payrix/payrix" }
