[workspace]
resolver = "2"
members = ["types", "http", "crypto", "db", "auth", "sync"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt"] }
async-trait = "0.1"

# Internal crates
core-types = { version = "0.1", path = "types" }
core-http = { version = "0.1", path = "http" }
core-crypto = { version = "0.1", path = "crypto" }
core-db = { version = "0.1", path = "db" }
core-auth = { version = "0.1", path = "auth" }
core-sync = { version = "0.1", path = "sync" }
