[package]
name = "connector-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AWS connector for Q SDK"

[features]
default = ["s3"]
s3 = []
dynamodb = []
sqs = []
ses = ["dep:aws-sdk-sesv2", "dep:base64", "dep:validator", "dep:serde_with"]
sns = ["dep:aws-sdk-sns", "dep:base64", "dep:openssl", "dep:reqwest", "dep:serde_with", "dep:textnonce", "dep:validator"]

[dependencies]
async-trait.workspace = true
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-sesv2 = { version = "1.65", optional = true }
aws-sdk-sns = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
connector-sdk.workspace = true
openssl = { version = "0.10", optional = true }
reqwest = { version = "0.12", optional = true }
serde.workspace = true
serde_with = { version = "3.12", optional = true }
textnonce = { version = "1.0", optional = true }
thiserror.workspace = true
tokio.workspace = true
validator = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
