[package]
name = "connector-payrix"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Payrix payment connector for Q SDK"

[features]
default = []

[dependencies]
async-trait.workspace = true
connector-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
