[package]
name = "connector-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SMTP connector for Q SDK"

[features]
default = []

[dependencies]
async-trait.workspace = true
connector-sdk.workspace = true
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
