[package]
name = "connector-webdav"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebDAV connector for Q SDK"

[features]
default = []

[dependencies]
async-trait.workspace = true
connector-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
xml-rs = "0.8"
