[package]
name = "core-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication and OAuth utilities for Q SDK"

[features]
default = ["std", "serde"]
# Standard library support (required - thiserror requires std)
std = []
# Serialization support
serde = ["dep:serde", "chrono/serde"]
# OAuth HTTP operations (token exchange, refresh)
http = ["dep:reqwest", "dep:chrono", "dep:urlencoding", "dep:serde_json"]
# PKCE support for client-side OAuth
pkce = ["dep:sha2", "dep:base64", "dep:rand"]
# Built-in provider implementations
providers = ["http", "dep:serde_json"]
# All features enabled
full = ["std", "serde", "http", "pkce", "providers"]

[dependencies]
# Always available
thiserror.workspace = true

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# HTTP operations (optional)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
chrono = { version = "0.4", optional = true }
urlencoding = { version = "2.1", optional = true }

# PKCE (optional)
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
