[package]
name = "core-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client utilities for Q SDK"

[features]
default = ["std"]
std = []

[dependencies]
core-types.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
